# financy-talk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  settings.example.yaml  settings.yaml
data/talkers/: TEMPLATE.md
data/talkers/talker1/: 2026-05-24.md  README.md
docs/superpowers/plans/: 2026-05-24-financy-talk.md
docs/superpowers/specs/: 2026-05-24-financy-talk-design.md
financy_talk/: cli.py  config.py
financy_talk/ai/: aggregator.py  analyzer.py
financy_talk/data/: digest.py  kb_builder.py  kb_schema.py  loader.py
financy_talk/output/: reporter.py
financy_talk/scrapers/: doubao.py  douyin.py
scripts/: batch_doubao.py
tests/: test_aggregator.py  test_analyzer.py  test_cli.py  test_config.py  test_kb.py  test_loader.py  test_reporter.py  test_scraper.py  test_tracker.py
