[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financy-talk"
version = "0.1.0"
description = "AI-powered financial talker transcript analysis"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "openai>=1.0",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
financy-talk = "financy_talk.cli:main"

[tool.setuptools.packages.find]
include = ["financy_talk*"]
